feat(video): added creators video list and minor fixes
